feat: expand book entity (#116)
* feat: drop unique constraints for isbn in books table

* feat: add new fields to BookEntity

* feat: expand Book domain model

* feat: expand BookResponse dto