@@ -104,9 +104,45 @@ class BookControllerTest {
 
     @Test
     void getAll_ShouldReturnListOfBookResponses() {
-        Book book = new Book(id, title, author, null, status, createdAt, Collections.emptySet());
-        BookResponse bookResponse =
-            new BookResponse(id, title, author, null, status.getValue(), createdAt, Collections.emptySet());
+        Book book = new Book(
+            id,
+            title,
+            author,
+            null,
+            status,
+            createdAt,
+            Collections.emptySet(),
+            Set.of(),
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            List.of(),
+            List.of()
+        );
+        BookResponse bookResponse = new BookResponse(
+            id,
+            title,
+            author,
+            null,
+            status.getValue(),
+            createdAt,
+            Collections.emptySet(),
+            Set.of(),
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            List.of(),
+            List.of()
+        );
+
         PageResult<Book> pageResult = new PageResult<>(List.of(book), 10, 0, 1, 1);
         when(getBooksUseCase.execute(any(PageQuery.class), eq(userId))).thenReturn(pageResult);
         when(bookWebMapper.toResponse(book)).thenReturn(bookResponse);
@@ -161,9 +197,44 @@ class BookControllerTest {
             null
         );
         BookDetailsUpdate data = new BookDetailsUpdate("new title", null, BookStatus.READING, null);
-        Book book = new Book(id, "new title", author, null, BookStatus.READING, createdAt, Collections.emptySet());
-        BookResponse bookResponse =
-            new BookResponse(id, "new title", author, null, "reading", createdAt, Collections.emptySet());
+        Book book = new Book(
+            id,
+            "new title",
+            author,
+            null,
+            BookStatus.READING,
+            createdAt,
+            Collections.emptySet(),
+            Set.of(),
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            List.of(),
+            List.of()
+        );
+        BookResponse bookResponse = new BookResponse(
+            id,
+            "new title",
+            author,
+            null,
+            "reading",
+            createdAt,
+            Collections.emptySet(),
+            Set.of(),
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            List.of(),
+            List.of()
+        );
         when(bookWebMapper.toDomain(request)).thenReturn(data);
         when(updateBookDetailsUseCase.execute(id, userId, data)).thenReturn(book);
         when(bookWebMapper.toResponse(book)).thenReturn(bookResponse);
@@ -188,9 +259,44 @@ class BookControllerTest {
     void create_ShouldCreateBook() {
         BookCreationRequest request = new BookCreationRequest(title, author, status.getValue(), Set.of(1, 2));
         BookCreation data = new BookCreation(title, author, null, Set.of(1, 2));
-        Book book = new Book(id, title, author, null, status, createdAt, Collections.emptySet());
-        BookResponse bookResponse =
-            new BookResponse(id, title, author, null, status.getValue(), createdAt, Collections.emptySet());
+        Book book = new Book(
+            id,
+            title,
+            author,
+            null,
+            status,
+            createdAt,
+            Collections.emptySet(),
+            Set.of(),
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            List.of(),
+            List.of()
+        );
+        BookResponse bookResponse = new BookResponse(
+            id,
+            title,
+            author,
+            null,
+            status.getValue(),
+            createdAt,
+            Collections.emptySet(),
+            Set.of(),
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            List.of(),
+            List.of()
+        );
         when(bookWebMapper.toDomain(request)).thenReturn(data);
         when(createBookUseCase.execute(data, userId)).thenReturn(book);
         when(bookWebMapper.toResponse(book)).thenReturn(bookResponse);
@@ -222,9 +328,44 @@ class BookControllerTest {
             "content".getBytes()
         );
         UploadCover data = new UploadCover(MediaType.IMAGE_JPEG_VALUE, null, 0L);
-        Book book = new Book(id, title, author, coverFileName, status, createdAt, null);
-        BookResponse bookResponse =
-            new BookResponse(id, title, author, coverFileName, status.getValue(), createdAt, null);
+        Book book = new Book(
+            id,
+            title,
+            author,
+            coverFileName,
+            status,
+            createdAt,
+            null,
+            Set.of(),
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            List.of(),
+            List.of()
+        );
+        BookResponse bookResponse = new BookResponse(
+            id,
+            title,
+            author,
+            coverFileName,
+            status.getValue(),
+            createdAt,
+            null,
+            Set.of(),
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            null,
+            List.of(),
+            List.of()
+        );
         when(uploadCoverWebMapper.toDomain(mockMultipartFile)).thenReturn(data);
         when(uploadCoverUseCase.execute(id, userId, data)).thenReturn(book);
         when(bookWebMapper.toResponse(book)).thenReturn(bookResponse);
